# if-arena

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CMakeLists.txt  LICENSE  PROJECT_MAP.md  README.md  REPOSITORY_STRUCTURE.md  play_if_arena.cmd  play_if_arena_ws.cmd
.github/: AGENTS.md  CODEOWNERS.example
.github/workflows/: main-ci.yml  pr-ci.yml
config/: AGENTS.md
config/examples/: README.md  server.local.json  server.public.json
config/scenarios/: README.md  arena_small_objective_run.json
config/test_scenarios/: invalid_asymmetric_obstacle.json
deploy/: AGENTS.md
deploy/docker/: Dockerfile.server  README.md
deploy/oracle-cloud/: README.md
deploy/railway/: README.md
docs/: AGENTS.md  README.md
docs/agent-manager/: AGENT_MANAGER_ROLE.md  HARNESS_MAINTENANCE.md  RULE_UPDATE_PROCESS.md  SESSION_RETROSPECTIVE_TEMPLATE.md
docs/agent-notes/: 0003-core-extraction-audit.md
docs/agent-rules/: README.md
docs/agent-runs/: 0000-coordination-plan.md  0001-bootstrap-build.md  0001a-sanitize-snapshot.md  0002-import-old-project-snapshot.md  0004-battle-core-facade.md  0005-protocol-envelope-and-limits.md  0006-backend-session-model.md  0007-tcp-transport-framing.md  0008-qt-client-network-skeleton.md  0009-websocket-transport-skeleton.md  0010-telegram-mini-app-skeleton.md  0011-telegram-auth-validation.md  0012-load-client-foundation.md  0013-ci-cd-guardrails.md  0014-agent-harness-scoped-instructions.md  0015-secrets-and-safe-logging-guardrails.md  0016-clean-foundation-before-playable-slice.md  0017-core-arena-map-and-config.md  0018-core-player-movement-and-collision.md  0019-core-objective-run-rules.md  0020-core-combat-dash-and-hazards.md  0021-protocol-playable-game-messages.md  0022-backend-match-loop-and-fake-sessions.md  0023-server-app-and-local-config.md  0024-cli-two-player-playable-flow.md  0025-tcp-vertical-slice-integration.md  0026-websocket-and-telegram-playable-slice.md  0027-qt-playable-client.md  0028-load-security-hardening-and-portfolio.md  0030-release-stabilization-and-qt-verification.md  0031-fix-playable-controls-and-arena-readability.md  0032-fix-websocket-client-envelope-and-idle-timeout.md  0033-fix-core-movement-mechanics-and-arena-rules.md  0034-document-and-enforce-architecture-boundaries.md  0036-integrate-svg-player-assets.md  0037-github-ci-and-public-release-baseline.md  0038-browser-e2e-playwright-harness.md  0039-server-tick-session-lifecycle-audit.md  0040-reconnect-resume-design-mvp.md  0041-protocol-security-hardening-pass.md  (+44 more)
docs/agent-seeds/: AGENT_CONTEXT_TEMPLATE.md  AGENT_PROGRESS_TEMPLATE.md  AGENT_RULES_TEMPLATE.md  AGENT_WORKFLOW_TEMPLATE.md  CODEX_ORCHESTRATOR_PROMPT.md  LLM_TOKEN_BUDGET.md  README.md  TASK_PACKET_TEMPLATE.md
docs/agent-tasks/: 0001-bootstrap-build.md  0002-import-old-project-snapshot.md  0003-core-extraction-audit.md  0004-battle-core-facade.md  0005-protocol-envelope-and-limits.md  0006-backend-session-model.md  0007-tcp-transport-framing.md  0008-qt-client-network-skeleton.md  0009-websocket-transport-skeleton.md  0010-telegram-mini-app-skeleton.md  0011-telegram-auth-validation.md  0012-load-client-foundation.md  0013-ci-cd-guardrails.md  0014-agent-harness-scoped-instructions.md  0015-secrets-and-safe-logging-guardrails.md  0016-clean-foundation-before-playable-slice.md  0017-core-arena-map-and-config.md  0018-core-player-movement-and-collision.md  0019-core-objective-run-rules.md  0020-core-combat-dash-and-hazards.md  0021-protocol-playable-game-messages.md  0022-backend-match-loop-and-fake-sessions.md  0023-server-app-and-local-config.md  0024-cli-two-player-playable-flow.md  0025-tcp-vertical-slice-integration.md  0026-websocket-and-telegram-playable-slice.md  0027-qt-playable-client.md  0028-load-security-hardening-and-portfolio.md  0030-release-stabilization-and-qt-verification.md  0031-fix-playable-controls-and-arena-readability.md  0032-fix-websocket-client-envelope-and-idle-timeout.md  0033-fix-core-movement-mechanics-and-arena-rules.md  0034-document-and-enforce-architecture-boundaries.md  0036-integrate-svg-player-assets.md  0037-github-ci-and-public-release-baseline.md  0038-browser-e2e-playwright-harness.md  0039-server-tick-session-lifecycle-audit.md  0040-reconnect-resume-design-mvp.md  0041-protocol-security-hardening-pass.md  0042-coverage-baseline-and-test-policy-audit.md  (+40 more)
docs/architecture/: BATTLE_CORE_BOUNDARIES.md  PROTOCOL.md  REAL_TIME_ARENA_SYNC.md  RECONNECT_RESUME.md  SUBSYSTEM_BOUNDARIES.md  TECHNICAL_ARCHITECTURE.md  TRANSPORT_ABSTRACTION.md
docs/ci/: CI_CD_GUARDRAILS.md
docs/demo/: README.md
docs/deployment/: DEPLOYMENT.md
docs/frontend/: TYPESCRIPT_FRONTEND_STANDARDS.md
docs/game/: ARENA_OBJECTS.md  BALANCING_NOTES.md  CONTROLS_AND_UI.md  GAMEPLAY_REQUIREMENTS.md  GAME_DESIGN.md  MAP_AND_FAIRNESS.md  OBJECTIVE_RULES.md  PLAYER_ORIENTED_VIEW.md  VISUAL_READABILITY.md
docs/operations/: OBSERVABILITY.md  RELEASE_NOTES_v0.1.0-playable-mvp.md  RELEASE_NOTES_v0.2.1-playable-alpha.md
docs/performance/: PERFORMANCE_AND_LOAD_TESTING.md
docs/project/: BACKLOG.md  CORE_EXTRACTION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  ORIGINAL_PROJECT_IMPORT.md  PLAYABLE_GAME_AGENT_PLAN.md  PRODUCT_REQUIREMENTS.md  PROJECT_BRIEF.md  REPOSITORY_BOOTSTRAP.md  TEST_PLAN.md
docs/quality/: COVERAGE_BASELINE.md  TEST_PLAN.md  TEST_POLICY_AUDIT_0042.md
docs/review/: CODE_REVIEW_CHECKLIST.md  QUALITY_GATES.md  SECURITY_REVIEW_PROMPT.md
docs/security/: SECRETS_MANAGEMENT.md  SECURITY_REQUIREMENTS.md  THREAT_MODEL.md  THREAT_MODEL_TEMPLATE.md
docs/telegram/: TELEGRAM_MINI_APP.md  TELEGRAM_SECURITY.md
frontend/telegram_mini_app/: .env.example  AGENTS.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
if_arena_0031_overlap/: README.md
replays/: README.md
reports/load/: 0012-dry-run.md  0028-local-tcp-smoke.md  README.md
scripts/: AGENTS.md  README.md  run_local_server.sh  run_public_server.sh
scripts/agent/: check_forbidden_files.py  (+3 more)
tests/: AGENTS.md
tools/: AGENTS.md
(+186 files in other folders)
